--- a/frontend/src/PlayerStats.css
+++ b/frontend/src/PlayerStats.css
@@ -1,12 +1,13 @@
-body {
+.container {
     font-family: 'Arial', sans-serif;
     background-color: #f4f4f4;
-    margin: 0;
     padding: 20px;
 }
+
 h1, h2 {
     color: #333;
 }
+
 form {
     background: #fff;
     padding: 20px;
@@ -14,25 +15,19 @@ form {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
 }
+
 label {
     font-weight: bold;
 }
-select, button {
+
+select {
     margin-top: 10px;
     padding: 10px;
     border-radius: 5px;
     border: 1px solid #ccc;
     width: 100%;
 }
-button {
-    background-color: #007bff;
-    color: white;
-    border: none;
-    cursor: pointer;
-}
-button:hover {
-    background-color: #0056b3;
-}
+
 table {
     width: 100%;
     border-collapse: collapse;
@@ -41,18 +36,21 @@ table {
     border-radius: 8px;
     overflow: hidden;
 }
+
 th, td {
     padding: 10px;
     text-align: center;
     border-bottom: 1px solid #ddd;
 }
+
 th {
     background-color: #007bff;
     color: white;
 }
+
 img {
     max-width: 100%;
     height: auto;
     border-radius: 8px;
     margin-top: 20px;
-}
+} 
